# Robotics-Exercises

devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/include/fanuc_kinematics/: ForwardKinematics.h  ForwardKinematicsRequest.h  ForwardKinematicsResponse.h  IKAction.h  IKActionFeedback.h  IKActionGoal.h  IKActionResult.h  IKFeedback.h  IKGoal.h  IKResult.h  JointAngles.h  JointAnglesArray.h
devel/include/fanuc_moveit/: AxisAngle.h  TransformationMatrix.h  Transformations.h  TransformationsArray.h
devel/include/moveit_dp_redundancy_resolution_msgs/: GetOptimizedJointsTrajectory.h  GetOptimizedJointsTrajectoryRequest.h  GetOptimizedJointsTrajectoryResponse.h  WorkspaceTrajectory.h
devel/lib/fanuc_moveit/: transformations_node_printer  (+1 more)
src/: moveit_dp_redundancy_resolution  moveit_dp_redundancy_resolution_msgs
src/fanuc_kinematics/: CMakeLists.txt  README.md  package.xml
src/fanuc_moveit/: .setup_assistant  CMakeLists.txt  CMakeLists.txt~  README.md
src/fanuc_moveit/config/: fanuc_m-20ia.srdf  joint_limits.yaml  ompl_planning.yaml
src/fanuc_moveit/doc/: 2020-11-10-Nota-11-30.sync-conflict-20201111-144937-4YNZKCL.xopp~  2020-11-10-Nota-11-30.xopp~
src/fanuc_moveit/launch/: chomp_planning_pipeline.launch.xml  demo_gazebo.launch  display.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml
src/fanuc_moveit/msg/: AxisAngle.msg  TransformationMatrix.msg  Transformations.msg  TransformationsArray.msg
src/fanuc_moveit/robot/: fanuc_m20ia.urdf
src/fanuc_moveit/src/: transformations_node_printer.cpp  transformations_node_publisher.cpp
src/fanuc_planning/: CMakeLists.txt  README.md
src/pub_sub/: CMakeLists.txt
(+139 files in other folders)
